<resources>
    <!-- General Strings -->
    <string name="app_name">Magical Match</string>
    <string name="action_settings">Settings</string>
    <string name="user_id">userId</string>
    <string name="profile_filename">profile.json</string>
    <string name="matches_prefix_filename">matches_</string>
    <string name="conversation_prefix_filename">conversations_</string>

    <!-- Activity's titles -->
    <string name="title_activity_principal_app">Magical Match</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_settings">Edit Interests</string>
    <string name="title_activity_perfil">Edit Profile</string>
    <string name="title_activity_chat">Chat</string>
    <string name="title_activity_match">Matches</string>
    <string name="title_activity_chat2">Chat</string>

    <!-- Protocol Strings -->
    <string name="server_ip">http://192.168.0.6:8000</string>
    <string name="login_uri">/login</string>
    <string name="register_uri">/register</string>
    <string name="update_profile_uri">/updateprofile</string>
    <string name="get_conversation_uri">/getconversation</string>
    <string name="send_conversation_uri">/sendconversation</string>
    <string name="get_matches_uri">/getmatches</string>
    <string name="get_pos_matches_uri">/getpossiblematches</string>
    <string name="like_uri">/like</string>
    <string name="dont_like_uri">/dislike</string>
    <string name="ok_response_code_register">201</string>
    <string name="ok_response_code_login">201</string>
    <string name="ok_response_code_upload_profile">200</string>
    <string name="ok_response_code_get_matches">201</string>
    <string name="ok_response_code_get_pos_matches">201</string>
    <string name="ok_response_code_get_conversation">201</string>
    <string name="ok_response_code_send_conversation">201</string>
    <string name="ok_response_code_send_pos_match_interest">201</string>
    <string name="existing_user_code">500</string>
    <string name="cant_connect_to_server">401:Cant connect with Server</string>

    <!-- Json data Strings -->
    <string name="userName">name</string>
    <string name="alias">alias</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="birthday">birthday</string>
    <string name="age">age</string>
    <string name="photoProfile">photo_profile</string>
    <string name="interest">interest</string>
    <string name="latitude">latitude</string>
    <string name="longitude">longitude</string>
    <string name="sex">sex</string>
    <string name="profilePhoto">photo_profile</string>
    <string name="category">category</string>
    <string name="value">value</string>
    <string name="location">location</string>
    <string name="interests">interests</string>
    <string name="pos_match_count">count</string>
    <string name="email_src">emailSrc</string>
    <string name="email_dst">emailDst</string>
    <string name="possible_matches">possibleMatches</string>
    <string name="matches">matches</string>
    <string name="conversation">conversation</string>
    <string name="conversations">conversations</string>
    <string name="messages">messages</string>
    <string name="msg">msg</string>
    <string name="user">user</string>
    <string name="any">any</string>
    <string name="send_from">sendFrom</string>

    <!-- General Activity strings-->
    <string name="male_en">male</string>
    <string name="female_en">female</string>
    <string name="please_wait_en">Please wait...</string>

    <!-- MainActivity messages -->
    <string name="prompt_user_mail_login_en">Email</string>
    <string name="prompt_user_password_login_en">Password</string>
    <string name="fields_incorrect_error_title_en">Error while login</string>
    <string name="fields_incorrect_error_en">Email or Password are incorrect</string>
    <string name="fields_empty_error_title_en">Fields Empty</string>
    <string name="fields_empty_error_en">Some fields are empty. Please complete the fields before continue</string>
    <string name="internet_disconnect_error_title_en">Internet disconnect</string>
    <string name="internet_disconnect_error_en">Please connect internet to continue</string>
    <string name="gps_disconnect_error_title_en">Gps disconnect</string>
    <string name="gps_disconnect_error_en">Please connect Gps to continue</string>
    <string name="wait_for_location_error_title_en">Location Unavailable</string>
    <string name="wait_for_location_error_en">Please wait a while until we have your location and continue</string>
    <string name="unavailable_service_title_en">Unavailable Service</string>
    <string name="unavailable_service_error_en">Please try in few minutes</string>
    <string name="log_processing_en">Login processing</string>
    <string name="login_button_en">LOGIN</string>
    <string name="register_button_en">REGISTER NOW</string>

    <!-- RegisterActivity messages -->
    <string name="birthdate_wrong_format_error_title_en">Wrong Birthdate</string>
    <string name="birthdate_wrong_format_error_en">Birthdate field has not right format or is empty. Format is: dd/mm/yyyy</string>
    <string name="mail_wrong_format_error_title_en">Wrong Email</string>
    <string name="mail_wrong_format_error_en">Email field has not right format or is empty</string>
    <string name="mail_exist_error_title_en">Email already exist</string>
    <string name="mail_exist_error_en">The Email you choose already exists. Please choose other</string>
    <string name="reg_processing_en">Registration processing</string>
    <string name="prompt_real_name_en">Name</string>
    <string name="prompt_user_mail_en">Email</string>
    <string name="prompt_user_name_en">User Name</string>
    <string name="prompt_user_password_en">Password</string>
    <string name="prompt_user_birthdate_en">Birthdate</string>
    <string name="continue_button_en">CONTINUE</string>

    <!-- ChatActivity messages -->
    <string name="write_message_text_en">Write message</string>
    <string name="send_message_button_en">Send</string>
    <string name="select_picture_en">Select Profile Picture</string>
    <string name="chat_tab_en">Chat</string>
    <string name="info_tab_en">Info</string>
    <string name="age_en">Age</string>

    <!-- ProfileActivity messages -->
    <string name="save_changes_button_en">SAVE CHANGES</string>
    <string name="profile_uploaded_en">Profile Uploaded</string>
    <string name="updating_profile_en">Updating profile</string>

    <!-- SettingsActivity messages -->
    <string name="interests_uploaded_en">Interests Uploaded</string>
    <string name="add_button_en">ADD</string>
    <string name="remove_button_en">REMOVE</string>
    <string name="choose_category_title_en">Choose Category:</string>
    <string name="add_interest_title_en">Add Interest</string>
    <string name="show_sex_title_en">Show me:</string>
    <string name="prompt_enter_category_interest">Enter interest</string>
    <string name="men">men</string>
    <string name="women">women</string>
    <string name="men_en">Men</string>
    <string name="women_en">Women</string>
    <string name="music_band_category">musicband</string>
    <string name="music_category">music</string>
    <string name="outdooors_category">outdoors</string>
    <string name="sport_category">sport</string>
    <string name="travel_category">travel</string>
    <string name="food_category">food</string>
    <string name="sex_category">sex</string>

    <!-- Strings in PrincipalAppActivity -->
    <string name="user_name_in_principal_app">Lucas</string>
    <string name="sending_interest_en">Sending Interest</string>
    <string name="no_match_found_alias_en">No Match Found</string>
    <string name="no_more_pos_matches_available_en">"You have no more possible matches, please come back tomorrow"</string>
    <string name="new_matches_en">YOU HAVE NEW MATCHES!</string>
    <string name="no_possible_matches_are_available_en">No possible matches are available. Please touch the heart to get more!</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Action Menu -->
    <string name="action_interests_en">Add Interests and save changes =)</string>
    <string name="action_profile_en">Change photo and save changes =)</string>
    <string name="action_register_en">Complete fields and Register!</string>
    <string name="action_login_en">Complete fields and Login!</string>
    <string name="action_chat_en">Chat with your Match :O</string>
    <string name="action_match_en">Select a Match and chat now!</string>
    <string name="action_principal_en">Touch heart and meet people :P</string>

    <!--<string name="action_interests_en">To add an interest please choose a category, write an interest and press Add Button</string>
    <string name="action_profile_en">To Change Profile Photo please click the photo. To change Name and UserName just write it in the appropriate text box</string>
    <string name="action_register_en">To Register please complete all fields and press Continue button</string>
    <string name="action_login_en">To Login please enter your email and password. If you have not an acount, please press Register Now button</string>
    <string name="action_chat_en">To Send a chat write it and press Send button. To see Match Information swipe the screen left</string>
    <string name="action_match_en"></string>
    <string name="action_principal_en"></string>-->
</resources>
