<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:weightSum="6"
    android:layout_marginTop="?attr/actionBarSize"
    tools:context=".RegisterActivity"
    tools:showIn="@layout/activity_register">

    <ScrollView
        android:id="@+id/register_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true" >

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#807d7d"
                app:hintTextAppearance="@style/TextAppearance.AppCompat" >
                <EditText
                    android:id="@+id/userRealName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_real_name_en"
                    android:inputType="textPersonName"
                    android:background="@drawable/apptheme_edit_text_holo_light"
                    android:textCursorDrawable="@null"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="#807d7d"
                    />
                </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#807d7d"
                app:hintTextAppearance="@style/TextAppearance.AppCompat">
                <EditText
                    android:id="@+id/userMail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/prompt_user_mail_en"
                    android:textColor="#807d7d"
                    android:textColorHint="#5f5c5c"
                    android:background="@drawable/apptheme_edit_text_holo_light"
                    android:textCursorDrawable="@null"     />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#807d7d"
                app:hintTextAppearance="@style/TextAppearance.AppCompat">
                <EditText
                    android:id="@+id/userName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/prompt_user_name_en"
                    android:textColor="#807d7d"
                    android:background="@drawable/apptheme_edit_text_holo_light"
                    android:textCursorDrawable="@null"     />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#807d7d"
                app:hintTextAppearance="@style/TextAppearance.AppCompat">
                <EditText
                    android:id="@+id/userPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/prompt_user_password_en"
                    android:textColor="#807d7d"
                    android:textColorHint="#5f5c5c"
                    android:background="@drawable/apptheme_edit_text_holo_light"
                    android:textCursorDrawable="@null"     />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#807d7d"
                app:hintTextAppearance="@style/TextAppearance.AppCompat">
                <EditText
                    android:id="@+id/userBirthdate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    android:backgroundTint="@color/colorPrimary"
                    android:hint="@string/prompt_user_birthdate_en"
                    android:textColor="#807d7d"
                    android:background="@drawable/apptheme_edit_text_holo_light"
                    android:textCursorDrawable="@null"     />
                </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:id="@+id/maleFemale"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/little_object_top_separation"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/userIsMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male_en"
                    android:checked="false" />

                <CheckBox
                    android:id="@+id/userIsFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female_en"
                    android:layout_marginLeft="40dp"
                    android:checked="false" />

            </LinearLayout>

            <Button
                android:id="@+id/ContinueRegisterButton"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/button_med_hight_height_margin"
                android:paddingLeft="@dimen/button_med_padding_margin"
                android:paddingRight="@dimen/button_med_padding_margin"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="6dp"
                android:textColor="#ffffff"
                android:text="@string/continue_button_en"
                android:layout_gravity="right"
                android:background="@drawable/blue_button" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>

