<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="taller2.match_client.SettingsActivity"
    tools:showIn="@layout/activity_perfil">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/content_register_margin"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true">

            <ImageView
                android:id="@+id/userPerfilPhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/no_match"
                android:layout_gravity="center_horizontal"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#807d7d"
                app:hintTextAppearance="@style/TextAppearance.AppCompat">
                <EditText
                    android:id="@+id/userRealNamePerfil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/apptheme_edit_text_holo_light"
                    android:hint="@string/prompt_real_name_en"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:layout_marginLeft="@dimen/text_margin"
                    android:layout_marginRight="@dimen/text_margin"
                    android:singleLine="true"
                    android:textColor="#807d7d"
                    android:textCursorDrawable="@null"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#807d7d"
                app:hintTextAppearance="@style/TextAppearance.AppCompat">
                <EditText
                    android:id="@+id/userNamePerfil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/apptheme_edit_text_holo_light"
                    android:inputType="text"
                    android:hint="@string/prompt_user_name_en"
                    android:layout_marginLeft="@dimen/text_margin"
                    android:layout_marginRight="@dimen/text_margin"
                    android:layout_below="@+id/userName"
                    android:textColor="#807d7d"
                    android:textCursorDrawable="@null"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#807d7d"
                app:hintTextAppearance="@style/TextAppearance.AppCompat">
                <EditText
                    android:id="@+id/userPasswordPerfil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/prompt_user_password_en"
                    android:layout_marginLeft="@dimen/text_margin"
                    android:layout_marginRight="@dimen/text_margin"
                    android:textColor="#807d7d"
                    android:background="@drawable/apptheme_edit_text_holo_light"
                    android:textCursorDrawable="@null" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#807d7d"
                app:hintTextAppearance="@style/TextAppearance.AppCompat">
                <EditText
                    android:id="@+id/userBirthdatePerfil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    android:layout_marginLeft="@dimen/text_margin"
                    android:layout_marginRight="@dimen/text_margin"
                    android:hint="@string/prompt_user_birthdate_en"
                    android:textColor="#807d7d"
                    android:textColorHint="#5f5c5c"
                    android:background="@drawable/apptheme_edit_text_holo_light"
                    android:textCursorDrawable="@null"/>
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/savePerfilButton"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/button_med_hight_height_margin"
                android:paddingLeft="@dimen/button_med_padding_margin"
                android:paddingRight="@dimen/button_med_padding_margin"
                android:layout_marginTop="@dimen/text_margin"
                android:layout_marginRight="@dimen/text_margin"
                android:layout_marginBottom="20dp"
                android:textColor="#ffffff"
                android:background="@drawable/blue_button"
                android:text="@string/save_changes_button_en"
                android:layout_gravity="right" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>

